// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/AsideLayout Aside Style Override 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <div
        style={
          Object {
            "background": "red",
            "height": "50px",
            "width": "700px",
          }
        }
      >
        Fixed width thing, overflow hidden by aside override
      </div>
    </div>
    <div
      data-css-63wt92=""
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AsideLayout Positions 1`] = `
<div
  style={
    Object {
      "color": "white",
      "padding": "64px",
    }
  }
>
  <div
    style={
      Object {
        "outline": "1px solid red",
      }
    }
  >
    <div
      data-css-19i7kll=""
    >
      <div
        data-css-34rq4a=""
      >
        This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        data-css-63wt92=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "outline": "1px solid red",
      }
    }
  >
    <div
      data-css-t8ydvh=""
    >
      <div
        data-css-qxcmpd=""
      >
        This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        data-css-63wt92=""
      >
        This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AsideLayout Short Aside Content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
    >
      Very short
    </div>
    <div
      data-css-63wt92=""
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AsideLayout Short Main Content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
    >
      This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
    </div>
    <div
      data-css-63wt92=""
    >
      Very little
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AsideLayout Wide Fixed Aside Content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
    >
      <div
        style={
          Object {
            "background": "red",
            "height": "50px",
            "width": "700px",
          }
        }
      >
        Fixed width thing, overflows
      </div>
    </div>
    <div
      data-css-63wt92=""
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EqualColumnLayout Counts 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "64px",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        (count: 
        two
        ) First child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Second child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Third child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fourth child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fifth child
      </div>
      <div
        data-css-evbaaa=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        (count: 
        three
        ) First child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Second child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Third child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fourth child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fifth child
      </div>
      <div
        data-css-ke1y92=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        (count: 
        four
        ) First child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Second child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Third child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fourth child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fifth child
      </div>
      <div
        data-css-18p75qs=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      data-css-oo8nrq=""
    >
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        (count: 
        six
        ) First child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Second child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Third child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fourth child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fifth child
      </div>
      <div
        data-css-nvudq=""
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EqualColumnLayout Custom Markup 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <ul
    data-css-oo8nrq=""
    style={
      Object {
        "listStyle": "none",
      }
    }
  >
    <li
      data-css-18p75qs=""
    >
      Renders list... First child
    </li>
    <li
      data-css-18p75qs=""
    >
      Second child
    </li>
    <li
      data-css-18p75qs=""
    >
      Third child
    </li>
    <li
      data-css-18p75qs=""
    >
      Fourth child
    </li>
    <li
      data-css-18p75qs=""
    >
      Fifth child
    </li>
    <li
      data-css-18p75qs=""
    >
      Sixth child
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Default 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My Page
    </h2>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Long Title 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Long Title With Actions 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
    <div
      data-css-1cnar9w=""
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Long Title With Lots Of Actions 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
    <div
      data-css-1cnar9w=""
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Lots Of Actions 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My Page
    </h2>
    <div
      data-css-1cnar9w=""
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout With Actions 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My Page
    </h2>
    <div
      data-css-1cnar9w=""
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1o01808=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageWidthLayout Default 1`] = `
<div
  data-css-60rhmp=""
  style={
    Object {
      "color": "white",
      "outline": "1px solid red",
    }
  }
>
  My content
</div>
`;

exports[`Storyshots Components/PageWidthLayout Full Bleed 1`] = `
<div
  style={
    Object {
      "background": "rebeccapurple",
    }
  }
>
  <div
    data-css-60rhmp=""
    style={
      Object {
        "color": "white",
        "outline": "1px solid red",
      }
    }
  >
    My content
  </div>
</div>
`;
